tests/ui/wf/wf-in-fn-arg.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/wf-in-fn-arg.rs:10:15
   |
LL | fn bar<T>(_: &MustBeCopy<T>)
   |               ^^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
note: required by a bound in `MustBeCopy`
  --> $DIR/wf-in-fn-arg.rs:6:21
   |
LL | struct MustBeCopy<T:Copy> {
   |                     ^^^^ required by this bound in `MustBeCopy`
help: consider restricting type parameter `T`
   |
LL | fn bar<T: std::marker::Copy>(_: &MustBeCopy<T>)
   |         +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
